--- a/book-store-api/views/reset-password.ejs
+++ b/book-store-api/views/reset-password.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forgot Password</title>
+    <title>Reset Password</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
@@ -11,19 +11,21 @@
     class="flex items-center justify-center h-screen text-slate-800 bg-slate-100"
   >
     <div class="max-w-lg w-full bg-blue-100 rounded-md p-5">
-      <h3 class="text-lg font-semibold mb-5">Forgot Your Password</h3>
+      <h3 class="text-lg font-semibold mb-5">
+        Reset Your Password <%= email %>
+      </h3>
       <form method="post" class="flex flex-col gap-2 w-full">
-        <label for="email">Email</label>
+        <label for="password">New Password </label>
         <input
-          name="email"
-          type="email"
+          name="password"
+          type="password"
           class="bg-slate-50 p-2 rounded-md h-11 border border-slate-500"
         />
         <button
           type="submit"
           class="px-8 py-2 mt-3 rounded-md bg-blue-600 text-slate-50 hover:bg-blue-700 cursor-pointer font-medium"
         >
-          Submit
+          reset
         </button>
       </form>
     </div>
